bk_ida/gccida/c0/copyprop_hardreg_forward
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward/src/regrename.c:2208:60: error: use of undeclared identifier 'value_data'
memcpy( &all_vd[b], &all_vd[bb->pred->src->index], sizeof( value_data)); 
                                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copyprop_hardreg_forward/src/obj/regrename.o] Error 1
